Разнообразие Мачико и индекс для текста

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </li>
         <li class="scroll-nav__item">
           <a class="scroll-nav__href" href="#scroll-nav__3">
-            Хобби 
+            Хобби
           </a>
         </li>
         <li class="scroll-nav__item">
@@ -58,10 +58,10 @@
         </div>
       </section>
       <section class="about">
-          <div data-speed="170" class="parallax parallax--1"></div>
-          <div data-speed="150" class="parallax parallax--2"></div>
-          <div data-speed="140" class="parallax parallax--3"></div>
-          <div data-speed="105" class="parallax parallax--4"></div>
+        <div data-speed="170" class="parallax parallax--1"></div>
+        <div data-speed="150" class="parallax parallax--2"></div>
+        <div data-speed="140" class="parallax parallax--3"></div>
+        <div data-speed="105" class="parallax parallax--4"></div>
         <h2 id="scroll-nav__1">О себе</h2>
         <div class="about__item">
           <img class="about__img about__img--right" src="img/titles/about.jpg" width="179px" height="241px" alt>
@@ -81,8 +81,9 @@
             Стоит признать, что потом шик конца 90-ых начал отступать, ему на смену пришел современный дешевый ремонт.
             Это были обычные школьные годы, в меру зубрежки, немного разгильдяйства, школьная самодеятьность,
             подростковые проблемы и прыщи. Моя история так же уникальна, как и истории миллионов других детей.
-            <br/>
-            <br/><!--Да, мне было лень заморачиваться с сеткой-->
+            <br />
+            <br />
+            <!--Да, мне было лень заморачиваться с сеткой-->
             На смену школе пришел ВУЗ. "Потому что так надо". Не то, чтобы я был этим недоволен. Пусть я и считаю своё
             образование бесполезным с пркиладной точки зрения, с учетом выпускной квалификации (экономист) и текущей
             профессией (верстальщик),
@@ -172,8 +173,11 @@
         </div>
       </section>
       <section class="outro">
+        <div data-speed="170" class="parallax parallax--3"></div>
+        <div data-speed="150" class="parallax parallax--4"></div>
         <p class="outro__text">В качестве прощания оставлю мемное видео, открывать на свой страх и риск</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OVuYIMa5XBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/OVuYIMa5XBw" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
     </div>
   </main>
