--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <section class="outro">
         <div data-speed="170" class="parallax parallax--3"></div>
         <div data-speed="150" class="parallax parallax--4"></div>
-        <p class="outro__text">В качестве прощания оставлю мемное видео, открывать на свой страх и риск</p>
+        <p class="outro__text">В качестве прощания оставлю мемное видео, открывать на свой страх и риск<br/> Мне тут сказали, что страничка суицидная, так вот: это не так!</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OVuYIMa5XBw" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
